# pqrs

./: CHANGELOG.md  README.md  pyproject.toml
docs/design/: 2021-04-12-versioned-roles.md
pqrs/: backend.py  cli.py  config.py  paths.py  selector.py  tui.py  version.py
