[tool.poetry]
name = "pqrs"
version = "0.0.1"
description = "CLI tool to manage Linux workstations."
authors = ["ProteinQure team <team@proteinqure.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
plumbum = "^1.7.0"
datafiles = "^0.13b5"
npyscreen = {url = "https://github.com/tbabej/npyscreen/archive/refs/heads/master.zip"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pqrs = 'pqrs.cli:run'
